# WuDu-s-UE

./: .gitignore  AssimpIntegrationGuide.md  CMakeLists.txt  CMakeSettings.json  GBufferLayoutExplain.md  MeshShadingIntegration.md  ModelRenderingImplementation.md  ModelTransformExplained.md  PBRDeferredPipelinePlan.md  PBRTODO.md  README.md  RenderPipelineAnalysis.md  ResourceSystemDocumentation.md  SetMeshColorExample.md  WuDu's UE.cpp  WuDu's UE.h  imgui.ini  problem.md
.trae/documents/: 修改SPIR-V编译工具为glslc.md
Core/private/: AdApplication.cpp
Core/private/ECS/: AdEntity.cpp  AdNode.cpp  AdScene.cpp  AdUUID.cpp
Core/private/ECS/Component/: AdFirstPersonCameraComponent.cpp  AdLookAtCameraComponent.cpp
Core/private/ECS/System/: AdBaseMaterialSystem.cpp  AdMaterialSystem.cpp  AdPBRDeferredMaterialSystem.cpp  AdPBRForwardMaterialSystem.cpp  AdPBRMaterialSystem.cpp  AdUnlitMaterialSystem.cpp
Core/private/Gui/: AdGuiEventHandler.cpp  AdGuiManager.cpp  AdGuiRenderer.cpp  AdGuiSystem.cpp  AdSceneEditor.cpp
Core/private/Gui/GuiSystem/: AdGuiSystem.cpp
Core/private/Render/: AdMaterial.cpp  AdMesh.cpp  AdRenderContext.cpp  AdRenderTarget.cpp  AdRenderer.cpp  AdSampler.cpp  AdTexture.cpp
Core/private/Resource/: AdModelLoader.cpp  AdModelResource.cpp
Core/public/: AdApplication.h  AdApplicationContext.h  AdEntryPoint.h  AdTimeStep.h
Core/public/ECS/: AdComponent.h  AdEntity.h  AdNode.h  AdScene.h  AdSystem.h  AdUUID.h
Core/public/ECS/Component/: AdFirstPersonCameraComponent.h  AdLookAtCameraComponent.h  AdTransformComponent.h
Core/public/ECS/Component/Light/: AdDirectionalLightComponent.h  AdLightComponent.h  AdPointLightComponent.h  AdSpotLightComponent.h
Core/public/ECS/Component/Material/: AdBaseMaterialComponent.h  AdMaterialComponent.h  AdPBRMaterialComponent.h  AdUnlitMaterialComponent.h
Core/public/ECS/System/: AdBaseMaterialSystem.h  AdCameraController.h  AdCameraControllerManager.h  AdMaterialSystem.h  AdPBRDeferredMaterialSystem.h  AdPBRForwardMaterialSystem.h  AdPBRMaterialSystem.h  AdUnlitMaterialSystem.h
Core/public/Gui/: AdGuiEventHandler.h  AdGuiManager.h  AdGuiRenderer.h  AdGuiSystem.h  AdSceneEditor.h
Core/public/Gui/GuiSystem/: AdGuiSystem.h
Core/public/Render/: AdMaterial.h  AdMesh.h  AdRenderContext.h  AdRenderTarget.h  AdRenderer.h  AdSampler.h  AdTexture.h
Core/public/Resource/: AdModelLoader.h  AdModelResource.h  AdResource.h  AdResourceManager.h
Platform/: CMakeLists.txt
Platform/private/: AdGeometryUtil.cpp  AdGraphicContext.cpp  AdWindow.cpp  Adlog.cpp
Platform/private/Graphic/: AdVKBuffer.cpp  AdVKCommandBuffer.cpp  AdVKDescriptorSet.cpp  AdVKDevice.cpp  AdVKFrameBuffer.cpp  AdVKGraphicContext.cpp  AdVKImage.cpp  AdVKImageView.cpp  AdVKPipeline.cpp  AdVKQueue.cpp  AdVKRenderPass.cpp  AdVkSwapchain.cpp
Platform/private/Window/: AdGlfwWindow.cpp
Platform/public/: AdEngine.h  AdFileUtil.h  AdGeometryUtil.h  AdGraphicContext.h  AdWindow.h  Adlog.h
Platform/public/Event/: AdEvent.h  AdEventAdaper.h  AdInputManager.h
Platform/public/Graphic/: AdVKBuffer.h  AdVKCommandBuffer.h  AdVKCommon.h  AdVKDescriptorSet.h  AdVKDevice.h  AdVKFrameBuffer.h  AdVKGraphicContext.h  AdVKImage.h  AdVKImageView.h  AdVKPipeline.h  AdVKQueue.h  AdVKRenderPass.h  AdVkSwapchain.cpp  AdVkSwapchain.h
Platform/public/Window/: AdGlfwWindow.h
Resource/Shader/: 00_hello_triangle.vert  00_hello_triangle.vert.spv  01_hello_buffer.vert  01_hello_buffer.vert.spv  02_descriptor_set.frag  02_descriptor_set.frag.spv  02_descriptor_set.vert  02_descriptor_set.vert.spv  03_unlit_material.frag  03_unlit_material.frag.spv  03_unlit_material.vert  03_unlit_material.vert.spv  PBR_Forward.frag  PBR_Forward.vert  glsl_shader.frag
Sample/: CMakeLists.txt
Sample/03_Texture/: CMakeLists.txt  Main.cpp
Sample/04_ECS_Entity/: CMakeLists.txt  Main.cpp
Sample/FirstCube/: CMakeLists.txt  Main.cpp
Sample/SandBox/: AdEventTesting.cpp  AdEventTesting.h  CMakeLists.txt  Main.cpp
cmake/: SPIR-V.cmake
core/: CMakeLists.txt
